1、修改gradle引入方式 2、ARouter    1、拦截器    2、参数传递

--- a/lib/uilib/src/main/res/values/strings.xml
+++ b/lib/uilib/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="app_name">ツナデ</string>
     <string name="login">登录</string>
     <string name="setting">设置</string>
+    <string name="arouter">ARouter</string>
+    <string name="go_to_login">跳转登录页面</string>
+    <string name="go_to_with_param_activity">跳转WithParamActivity</string>
+    <string name="real_name">实名认证</string>
 </resources>
