1、ARouter    1、路由替换PathReplaceService    2、参数传递withObject实现    3、动态路由注册（需要1.5.2版本或以上）

--- a/lib/uilib/src/main/res/values/strings.xml
+++ b/lib/uilib/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="go_to_login">跳转登录页面</string>
     <string name="go_to_with_param_activity">跳转WithParamActivity</string>
     <string name="real_name">实名认证</string>
+    <string name="dynamic_route_registration">动态路由注册</string>
+    <string name="unrealized">（未实现）</string>
+    <string name="path_replace_service">路由Path被替换</string>
 </resources>
