1、ARouter 全局降级策略

--- a/lib/uilib/src/main/res/values/strings.xml
+++ b/lib/uilib/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="unrealized">（未实现）</string>
     <string name="path_replace_service">路由Path被替换</string>
     <string name="pretreatment_service">预处理服务</string>
+    <string name="degrade_service">全局降级策略</string>
 </resources>
